<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/black"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navbar"
        android:layout_marginTop="5dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/settingbtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:padding="12dp"
                android:scaleType="centerInside"
                android:background="@drawable/round"
                android:src="@drawable/settings_24"
                />
        </LinearLayout>
        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/white"
            android:layout_marginRight="10dp"
            android:background="@drawable/round"
            android:src="@drawable/search_24"
            android:scaleType="centerInside"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navbar"
        android:layout_marginTop="10dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="7dp"
            android:layout_marginBottom="7dp"
            android:background="@color/black"
            app:tabIconTint="@color/grey"
            app:tabIndicatorColor="@color/white"
            app:tabInlineLabel="true"
            app:tabMode="scrollable"
            app:tabRippleColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/grey"
            android:theme="@style/Widget.Design.TabLayout"
            >

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/subtitles_24"
                android:text="@string/subbed" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/mic_double_24px"
                android:text="@string/dubbed" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/chinese"
                android:text="@string/chinese" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/category_24"
                android:text="@string/genres" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/trending_up_24"
                android:text="@string/popular" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/movie_filter_24"
                android:text="@string/movies" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/fragmentContainerViewPager2Main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabLayout" />

    </RelativeLayout>

</RelativeLayout>